updates clipboard search and adds player progress to SongDetailViewController

--- a/SendTrack/UI/Base.lproj/Main.storyboard
+++ b/SendTrack/UI/Base.lproj/Main.storyboard
@@ -563,6 +563,6 @@
         <image name="playSquare" width="816" height="816"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ghL-kJ-R8l"/>
+        <segue reference="ck8-oH-3qo"/>
     </inferredMetricsTieBreakers>
 </document>
