--- a/SendTrack-Message-Extension/UI/Base.lproj/MainInterface.storyboard
+++ b/SendTrack-Message-Extension/UI/Base.lproj/MainInterface.storyboard
@@ -35,48 +35,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search for a Song..." translatesAutoresizingMaskIntoConstraints="NO" id="yAc-ij-8ql">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3Vm-f3-sdv" id="x9X-Pc-mO4"/>
+                                </connections>
+                            </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1ZL-R0-TqQ">
                                 <rect key="frame" x="0.0" y="56" width="375" height="756"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gy0-qt-IRs">
-                                    <size key="itemSize" width="115" height="115"/>
+                                    <size key="itemSize" width="115" height="160"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="topSongCell" id="pnV-MR-jhO" customClass="TopSongCollectionViewCell" customModule="SendTrack_Message_Extension" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="10" width="115" height="115"/>
+                                        <rect key="frame" x="0.0" y="10" width="115" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="115" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mg6-aN-AbE">
-                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="160"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mNB-uy-jlb">
-                                                            <rect key="frame" x="17.333333333333336" y="0.0" width="80.333333333333314" height="80.666666666666671"/>
+                                                            <rect key="frame" x="1.6666666666666643" y="0.0" width="112" height="112"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="mNB-uy-jlb" secondAttribute="height" multiplier="1:1" id="0Fr-eR-tIQ"/>
                                                             </constraints>
                                                         </imageView>
                                                         <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qeJ-cX-eOE">
-                                                            <rect key="frame" x="47.666666666666664" y="30.333333333333329" width="19.999999999999993" height="20"/>
+                                                            <rect key="frame" x="47.666666666666664" y="46" width="19.999999999999993" height="20"/>
                                                         </activityIndicatorView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gf2-xV-qP2">
-                                                            <rect key="frame" x="69.666666666666671" y="52.333333333333336" width="24" height="24.333333333333336"/>
+                                                            <rect key="frame" x="76" y="74.333333333333329" width="33.666666666666657" height="33.666666666666671"/>
                                                             <subviews>
                                                                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ppv-FB-eag">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="24" height="24.333333333333332"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="33.666666666666664" height="33.666666666666664"/>
                                                                     <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <connections>
                                                                         <action selector="playPauseButtonTapped:" destination="pnV-MR-jhO" eventType="touchUpInside" id="xf5-xe-YhQ"/>
                                                                     </connections>
                                                                 </button>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="playSquare" translatesAutoresizingMaskIntoConstraints="NO" id="6QA-h6-LVq">
-                                                                    <rect key="frame" x="5.3333333333333295" y="5.3333333333333277" width="13.333333333333336" height="13.666666666666664"/>
+                                                                    <rect key="frame" x="7.3333333333333304" y="7.3333333333333428" width="18.666666666666671" height="19"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="6QA-h6-LVq" secondAttribute="height" multiplier="1:1" id="TYO-gp-UXq"/>
                                                                     </constraints>
@@ -100,7 +108,7 @@
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(song name label is two lines)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wk7-MV-x3j">
-                                                            <rect key="frame" x="5.6666666666666643" y="83.666666666666671" width="103.66666666666669" height="28.333333333333329"/>
+                                                            <rect key="frame" x="1.6666666666666643" y="115" width="112" height="42"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -108,7 +116,7 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstItem="wk7-MV-x3j" firstAttribute="width" secondItem="Mg6-aN-AbE" secondAttribute="width" multiplier="0.9" id="16N-0W-ODs"/>
+                                                        <constraint firstItem="wk7-MV-x3j" firstAttribute="width" secondItem="mNB-uy-jlb" secondAttribute="width" id="16N-0W-ODs"/>
                                                         <constraint firstItem="wk7-MV-x3j" firstAttribute="top" secondItem="mNB-uy-jlb" secondAttribute="bottom" constant="3" id="4YZ-ks-8Pv"/>
                                                         <constraint firstItem="mNB-uy-jlb" firstAttribute="top" secondItem="Mg6-aN-AbE" secondAttribute="top" id="4tY-SZ-jtO"/>
                                                         <constraint firstItem="gf2-xV-qP2" firstAttribute="bottom" secondItem="mNB-uy-jlb" secondAttribute="bottom" constant="-4" id="6ba-sX-wGa"/>
@@ -146,14 +154,6 @@
                                     <outlet property="delegate" destination="3Vm-f3-sdv" id="HAf-0x-H9v"/>
                                 </connections>
                             </collectionView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search for a Song..." translatesAutoresizingMaskIntoConstraints="NO" id="yAc-ij-8ql">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="3Vm-f3-sdv" id="x9X-Pc-mO4"/>
-                                </connections>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="v26-2v-H51"/>
